test/good/loops/label03.px

while true label l do
    until true label l do
        for x in 0... label l do
            print x
            break l
            print false
        print 'A'
        continue l
    print true
    break l
