test/bad/loops/label02.px

until false label loop1 do
    for _ in 0... label loop2 do
        skip
    break loop2
